# kleon

./: Dockerfile  README.md  package-lock.json
backend/: Cargo.toml  Dockerfile  railway.json
backend/src/: genai.rs  main.rs
frontend/: package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/explain_sql/: route.tsx
frontend/src/app/api/generate_sql/mariadb/: route.tsx
frontend/src/app/api/generate_sql/mongodb/: route.tsx
frontend/src/app/api/generate_sql/mysql/: route.tsx
frontend/src/app/api/users/login/: route.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/hero/: Hero.css  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/profile/[id]/: page.tsx
frontend/src/app/queries/mariadb/: page.tsx
frontend/src/app/queries/mongodb/: page.tsx
frontend/src/app/queries/mysql/: page.tsx
frontend/src/app/queries/postgresql/: page.tsx
frontend/src/app/queries/sqlite/: page.tsx
frontend/src/app/query/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: Banner.tsx  Features.tsx  HeroPage.tsx  Navbar.tsx
frontend/src/components/authContext/: index.tsx
frontend/src/components/footer/: index.tsx
frontend/src/components/header/: index.tsx
frontend/src/components/hero/: index.tsx
frontend/src/components/queryExplanation/: index.tsx
frontend/src/dbConfig/: dbConfig.ts
frontend/src/helpers/: getDataFromToken.ts
frontend/src/models/: userModel.js
(+5 files in other folders)
