[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
tokenizers = "0.19.1"
tokio = "1.38.1"
# cargo.toml
genai = "=0.1.5" # Version lock for `0.1.x`
dotenv="0.15"
regex = "1.10.5"





